# B-up-

./: .gitignore  README.md  cli.py  client.py  config.py  pyproject.toml  start_crawler.bat
examples/: README.md
examples/sample_output/: academic_report.html  academic_report.md  comments.csv  summary.json  videos.csv
src/bili_up_crawler/: __init__.py  browser.py  cli.py  config.py  crawler.py  interactive.py  report.py  signing.py  targets.py
tests/: test_cli.py  test_crawler.py  test_interactive.py  test_report.py  test_signing.py  test_targets.py
