[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bili-up-crawler"
version = "0.2.0"
description = "A standalone crawler for public Bilibili UP account data with academic-ready report export."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Lyan-edit"}
]
dependencies = [
  "requests",
  "selenium"
]
keywords = ["bilibili", "crawler", "scraper", "selenium", "data-collection"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
bili-up-crawler = "bili_up_crawler.cli:main"
bili-up-crawler-interactive = "bili_up_crawler.interactive:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
